--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A WhatsApp bot created using Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name KAVI-EXE_V1",
-    "stop": "pm2 stop KAVI-EXE-V1",
-    "restart": "pm2 restart KAVI-EXE-V1"
+    "start": "pm2 start index.js --deep-monitoring --attach --name KAVI EXE_V1",
+    "stop": "pm2 stop KAVI EXE -V1",
+    "restart": "pm2 restart KAVI EXE-V1"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.6.0",
@@ -24,7 +24,7 @@
     "vm": "^0.1.0",
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.11.1",
-    "api-dylux":"1.8.3"
+    "api-dylux":"1.8.5"
     
   
   }
